Bug 67444 - Lorem Ipsum extension crashes LibreOffice
Summary: Lorem Ipsum extension crashes LibreOffice
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Extensions (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: Other All
: high major
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:4.2.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-07-28 18:15 UTC by Ivan Timofeev (retired)
Modified: 2013-08-07 11:22 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ivan Timofeev (retired) 2013-07-28 18:15:45 UTC
1. Install "Magenta Lorem Ipsum Generator 1.6.0":
http://extensions.libreoffice.org/extension-center/magenta-lorem-ipsum-generator/releases/1.6.0
2. Open Writer and press the toolbutton the extension provides.
=> crash in stringresource::StringResourcePersistenceImpl::loadLocale(stringresource::LocaleItem*) 

Eike, reverting your commit 38522416bd6a85f206b8c294726dd2e3d6a63567 "use LanguageTag::getMatchingFallback()" helps, could you take a look please? Thanks!
Comment 1 Eike Rathke (retired, only occasionally showing up) 2013-08-06 15:27:51 UTC
Which "toolbutton" where? And btw what locale are you working in?
Comment 2 Ivan Timofeev (retired) 2013-08-06 17:15:18 UTC
(In reply to comment #1)
> Which "toolbutton" where? 

Um... View - Toolbars - Lorem Ipsum 

> And btw what locale are you working in?

$ locale
LANG=ru_RU.UTF-8
LANGUAGE=
LC_CTYPE="ru_RU.UTF-8"
LC_NUMERIC="ru_RU.UTF-8"
LC_TIME="ru_RU.UTF-8"
LC_COLLATE="ru_RU.UTF-8"
LC_MONETARY="ru_RU.UTF-8"
LC_MESSAGES="ru_RU.UTF-8"
LC_PAPER="ru_RU.UTF-8"
LC_NAME="ru_RU.UTF-8"
LC_ADDRESS="ru_RU.UTF-8"
LC_TELEPHONE="ru_RU.UTF-8"
LC_MEASUREMENT="ru_RU.UTF-8"
LC_IDENTIFICATION="ru_RU.UTF-8"
LC_ALL=
Comment 3 Eike Rathke (retired, only occasionally showing up) 2013-08-07 08:50:07 UTC
> > Which "toolbutton" where? 
> 
> Um... View - Toolbars - Lorem Ipsum 

Thanks, I was victim of a version where extensions' toolbars and buttons didn't show up at all.. with a fresh build I can reproduce.
Comment 4 Commit Notification 2013-08-07 10:13:55 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6b2aaa7d2393db7c5df9ed3e695013b1e44d868f

resolved fdo#67444 don't push_back() with already reserved size



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Ivan Timofeev (retired) 2013-08-07 11:22:19 UTC
Verified, thanks!