resolved fdo#67444 don't push_back() with already reserved size

Change-Id: I5660bdf07ad0adae053508bed1805369850c1134