scripting/source/stringresource/stringresource.cxx
@@ -687,10 +687,11 @@ LocaleItem* StringResourceImpl::getClosestMatchItemForLocale( const Locale& loca
     LocaleItem* pRetItem = NULL;
 
     ::std::vector< Locale > aLocales( m_aLocaleItemVector.size());
-    for( LocaleItemVectorConstIt it = m_aLocaleItemVector.begin(); it != m_aLocaleItemVector.end(); ++it )
+    size_t i = 0;
+    for( LocaleItemVectorConstIt it = m_aLocaleItemVector.begin(); it != m_aLocaleItemVector.end(); ++it, ++i )
     {
         LocaleItem* pLocaleItem = *it;
-        aLocales.push_back( pLocaleItem ? pLocaleItem->m_locale : Locale());
+        aLocales[i] = (pLocaleItem ? pLocaleItem->m_locale : Locale());
     }
     ::std::vector< Locale >::const_iterator iFound( LanguageTag::getMatchingFallback( aLocales, locale));
     if (iFound != aLocales.end())
